✨ Select sd card

--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "scripts": {
     "test": "echo \"Error: no test s,pecified\" && exit 1",
     "start": "node index.js",
-    "package": "pkg --debug ."
+    "package": "pkg ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "archiver": "^4.0.2",
-    "figlet": "^1.7.0",
-    "pkg": "^5.8.1"
+    "figlet": "^1.7.0"
   }
 }
